AOS-358 Bedre overstyringsmuligheter og testbarhet for EventLogger (#273)
Co-authored-by: Erik Dahl <89081489+erkdahl@users.noreply.github.com>